[package]
name = "methods-2lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }

chrono = "0.4.38"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
log4rs = "1.3.0" 
deadpool-postgres = { version = "0.13.0", features = ["serde"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tinytemplate = "1.1.0"
sparkpost = "0.5.4"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8.12"
once_cell = "1.19"
markdown = "1.0.0-alpha.16"
derive_more = "0.99"
rust-argon2 = "2"